also install pgpool-pcp

--- a/roles/citus-pgpool/tasks/main.yml
+++ b/roles/citus-pgpool/tasks/main.yml
@@ -2,7 +2,9 @@
 # tasks file for citus-pgpool
 - name: install pgpool
   dnf:
-    name: pgpool-II
+    name: 
+      - pgpool-II
+      - pgpool-II-pcp
     state: present
 
 - name: copy config
