added capability to monitor and reattach standby nodes

--- a/playbook-examples/citus-cluster.yml
+++ b/playbook-examples/citus-cluster.yml
@@ -4,7 +4,10 @@
     - role: citus-coordinator
       vars:
         is_monitor: true
-        trust_network: 10.210.14.0/24
+        pgpool_host: 10.210.14.48
+        pgpool_pcp_pass: pgpool
+        trust_networks: 
+          - 10.210.14.0/24
 
 - hosts: db
   serial: 1
@@ -12,7 +15,6 @@
     - citus-node
     - role: citus-coordinator
       vars:
-        is_monitor: false
         monitor_host: 10.210.14.43
         trust_networks:
           - 10.210.14.0/24
@@ -25,3 +27,4 @@
         backends:
           - 10.210.14.44
           - 10.210.14.45
+        pgpool_pcp_pass: pgpool
