added new files and updated script for enabling haproxy

--- a/roles/citus-coordinator/files/haproxy.cfg
+++ b/roles/citus-coordinator/files/haproxy.cfg
@@ -1,6 +1,6 @@
 global
     maxconn 100
- 
+
 defaults
     log global
     mode tcp
@@ -9,22 +9,29 @@ defaults
     timeout connect 4s
     timeout server 30m
     timeout check 5s
- 
+
 listen stats
     mode http
     bind *:7000
     stats enable
     stats uri /
 
-frontend postgresql-front
+listen ReadWrite
     bind *:5000
-    mode tcp
-    default_backend postgresql-backend
+    option httpchk
+    http-check expect status 200
+    default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
+    server citus-dw-01 citus-dw-01.mafc2.mil.my:5432 check port 23267
+    server citus-dw-02 citus-dw-02.mafc2.mil.my:5432 check port 23267
+    server citus-dw-03 citus-dw-03.mafc2.mil.my:5432 check port 23267
 
-backend postgresql-backend
-    mode tcp
-    balance roundrobin
-    option pgsql-check user primaryuser # Set the user that HAProxy will use to connect to PostgreSQL
-    server citus-node1 citus-node1.internal.lan:5432 check port 5432 inter 5s downinter 5s rise 2 fall 3
-    server citus-node2 citus-node2.internal.lan:5432 check port 5432 backup
-    server citus-node3 citus-node3.internal.lan:5432 check port 5432 backup
+listen ReadOnly
+    bind *:5001
+    option httpchk
+    http-check expect status 206
+    default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
+    server citus-dw-01 citus-dw-01.mafc2.mil.my:5432 check port 23267
+    server citus-dw-02 citus-dw-02.mafc2.mil.my:5432 check port 23267
+    server citus-dw-03 citus-dw-03.mafc2.mil.my:5432 check port 23267
+
+
